@@ -20,8 +20,10 @@
     #define I_ROUND(x) (::lrintf(x)) 
 #elif defined(HAVE_RINTF)
     #define I_ROUND(x) ((int)::rintf(x)) 
-#else
+#elif defined(HAVE_RINT)
     #define I_ROUND(x) ((int)::rint(x)) 
+#else
+    #define I_ROUND(x) ((int)(x)) 
 #endif
 
 namespace Mercator {
