@@ -1,3 +1,14 @@
+2004-04-07  Al Riddoch  <alriddoch@zepler.org>
+
+	* Mercator/Terrain.h, Mercator/Terrain.cpp: Fixes to be compatible
+	  with other compilers.
+
+	* Mercator/Segment.cpp: Fix seem normals, and avoid using variable
+	  size local arrays, and handle systems with no rint.
+
+	* Mercator/Forest.cpp, Mercator/DepthShader.cpp: Handle systems with
+	  no rint.
+
 2004-03-19  Al Riddoch  <alriddoch@zepler.org>
 
 	* Mercator/GrassShader.cpp: Fix uninitialised 0,0 corner tile
